# svr-algorithm

./: .codecov.yml  .gitignore  .travis.yml  README.md  amanatidesWooAlgorithm.m  angular_hit.m  build.sh  codecov.yml  polarCoordinateTraversal.m  polarCoordinateTraversalExample.m  polarCoordinateTraversalTest.m  polarCoordinateTraversal_dotprod.m  polarCoordinateTraversal_old.m  radial_hit.m  radial_hit_dotprod.m  radial_hit_old.m  rayBoxIntersection.m  sphereTestPlot.py  travis_cmake_gcc_cpp11.pro
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
SphericalTraversal/: angular_hit.m  azimuthal_hit.m  sphericalCoordinateTraversal.m  sphericalCoordinateTraversalTest.m
collab/: angular_hit.m  polarCoordinateTraversal_jenkyR.m  polarCoordinateTraversal_old.m  radial_hit.m  radial_hit_jenkyR.m
cpp/: CMakeLists.txt  CythonSVR.c  CythonSVR.cpp  CythonSVR.pyx  CythonSVR_test.py  Cython_SVR_setup.py  floating_point_comparison_util.h  ray.h  spherical_volume_rendering_util.cpp  spherical_volume_rendering_util.h  spherical_voxel_grid.h  vec3.h
cpp/benchmarks/: CMakeLists.txt  SVR_benchmarks.cpp  benchmark_SVR.cpp  benchmark_svr.cpp
cpp/cython/: CythonSVR.pyx  CythonSVR_test.py  Cython_SVR.cpp  Cython_SVR.pyx  Cython_SVR_setup.py  Cython_SVR_tests.py  cython_SVR.pyx  cython_SVR_setup.py  cython_SVR_tests.py  printTests.py
cpp/cython/tests/: test_walk_spherical_volume.py
cpp/testing/: .travis.yml  CMakeLists.txt  SVR_benchmarks.cpp  SVR_tests.cpp  benchmarking.cpp  print_tests_script.py  profiling.cpp  spherical_volume_rendering_test.cpp
cpp/testing/googletest/googlemock/include/gmock/: gmock-matchers.h
cpp/tests/: .travis.yml  CMakeLists.txt  CMakeLists.txt.in  SVR_benchmarks.cpp  ci_tests.cpp  continuous_integration_tests.cpp  print_tests_script.py  test_SVR.cpp  test_svr.cpp
jenkyR/: radial_hit_old.m
matlab/polar-traversal/: angular_hit.m  angular_hit.m~  approximatelyEqual.m  polarCoordinateTraversal.m  polarCoordinateTraversal.m~  polarCoordinateTraversalExample.m  polarCoordinateTraversalTest.m  radial_hit.m  strictlyLess.m
matlab/spherical-traversal/: SphericalCoordinateTraversalExample.m  angular_hit.m  angular_hit.m~  angular_init.m  approximatelyEqual.m  azimuthal_hit.m  polar_hit.m  radial_hit.m  radial_init.m  radial_intersection_points.m  radial_intersection_times.m  sphericalCoordinateTraversal.m  sphericalCoordinateTraversal.m~  sphericalCoordinateTraversalSectioned.m  sphericalCoordinateTraversalSectionedTest.m  sphericalCoordinateTraversalTest.m
