cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 11)
project(SVR)
set(BINARY ${CMAKE_PROJECT_NAME}_tests)
set(BENCHMARK_BINARY ${CMAKE_PROJECT_NAME}_benchmark)
set(SOURCE_FILES ../spherical_volume_rendering_util.h ../spherical_volume_rendering_util.cpp spherical_volume_rendering_test.cpp)
set(BENCHMARK_SOURCE_FILES ../spherical_volume_rendering_util.h ../spherical_volume_rendering_util.cpp benchmarking.cpp)

add_definitions(-DNDEBUG)
add_subdirectory(googletest)
add_subdirectory(benchmark)
include_directories(${../cpp})
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
include_directories(${gmock_SOURCE_DIR}/include ${gmock_SOURCE_DIR})

add_executable(${BENCHMARK_BINARY} ${BENCHMARK_SOURCE_FILES})
add_executable(${BINARY} ${SOURCE_FILES})
add_test(NAME ${BINARY} COMMAND ${BINARY})
target_link_libraries(${BENCHMARK_BINARY} benchmark::benchmark)
target_link_libraries(${BINARY} gtest gtest_main gmock gmock_main)